<resources>
    <string name="app_name">Initial Music</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="albumCover">Album Cover</string>
    <string name="speed_not_available">Speed not available</string>
    <string name="intervalSpeed">%1$d km/h</string>
    <string name="current_speed">%1$.2f km/h</string>
    <string name="settings">Settings</string>
    <string name="newList">New List</string>
    <string name="addList">Add List</string>
    <string name="delete">Delete</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="valueInt">%1$d</string>
    <string name="zero">0</string>
    <string name="minutesAndSeconds">%1$d:%2$d%3$d</string>
    <string name="fillInAllFields">Please fill in all fields</string>
    <string name="defaultList">Default List</string>
    <string name="sharedPreferences">InitialMusicPrefs</string>
    <string name="sharedPreferences_lastPlayedSongEver">LAST_SONG_EVER</string>
    <string name="songs">Songs</string>
    <string name="lists">Lists</string>
    <string name="listsNames">Lists names</string>
    <string name="author">Author</string>

    <string name="useGlobalSpeed">Use global speed</string>
    <string name="globalSpeedText">Global speed</string>
    <string name="globalSpeed">70</string>

    <string name="nameFragment">List Name</string>
    <string name="songsFragment">Songs</string>
    <string name="speedFragment">Speed</string>
    <string name="summaryFragment">Summary</string>

    <string name="selectedSongs">Selected Songs</string>
    <string name="notSelectedSongs">Not Selected Songs</string>

    <string name="summaryTitleList">List contains %1$d songs</string>
    <plurals name="summaryTitleList">
        <item quantity="one">List contains %1$d song</item>
        <item quantity="other">List contains %1$d songs</item>
    </plurals>
    <plurals name="summaryTitleInterval">
        <item quantity="one">Interval with %1$d song</item>
        <item quantity="other">Interval with %1$d songs</item>
    </plurals>

    <string name="setListsName">Set name for your new list</string>
    <string name="listName">List name</string>
    <string name="chosenSongsHeader">Chosen songs</string>
    <string name="otherSongsHeader">Other songs</string>
    <string name="done">Done</string>
    <string name="create">Create</string>
    <string name="arrowRight">Show</string>
    <string name="kmPerHour">%1$d km/h</string>
    <plurals name="songsCount">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="volume">Volume: %1$d</string>
    <string name="speed">Speed: %1$d km/h</string>
    <string name="addNewInterval">Add new interval</string>
    <string name="intervalAddingDialogMessage">There is interval created with same speed. Choose one of those options. Volume for the interval will be overwritten if you choose to connect them.</string>
    <string name="connectIntervals">Connect intervals</string>
    <string name="replaceInterval">Replace intervals</string>

</resources>
