<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingStart="15dp"
    android:paddingRight="15dp"
    android:paddingEnd="15dp">
    <ImageView
        android:id="@+id/settings_0Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="60dp"
        android:layout_marginEnd="60dp"
        android:layout_below="@id/settings_newListName"
        android:src="@drawable/ic_keyboard_arrow_up_black_48dp"
        android:contentDescription="@string/up"
        android:onClick="changeValue"/>
    <ImageView
        android:id="@+id/settings_1Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/settings_0Up"
        android:layout_toStartOf="@id/settings_0Up"
        android:layout_below="@id/settings_newListName"
        android:src="@drawable/ic_keyboard_arrow_up_black_48dp"
        android:contentDescription="@string/up"
        android:onClick="changeValue"/>
    <ImageView
        android:id="@+id/settings_2Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/settings_1Up"
        android:layout_toStartOf="@id/settings_1Up"
        android:layout_below="@id/settings_newListName"
        android:src="@drawable/ic_keyboard_arrow_up_black_48dp"
        android:contentDescription="@string/up"
        android:onClick="changeValue"/>
    <TextView
        android:id="@+id/settings_0PositionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_0Up"
        android:layout_toEndOf="@+id/settings_1Up"
        android:layout_toRightOf="@+id/settings_1Up"
        android:layout_alignRight="@id/settings_0Up"
        android:layout_alignEnd="@id/settings_0Up"
        android:text="@string/zero"
        android:textSize="30sp"
        android:textAlignment="center"
        android:maxLength="1"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/settings_1PositionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_0Up"
        android:layout_toRightOf="@+id/settings_2Up"
        android:layout_toEndOf="@+id/settings_2Up"
        android:layout_toLeftOf="@id/settings_0PositionNumber"
        android:layout_toStartOf="@id/settings_0PositionNumber"
        android:text="@string/zero"
        android:textSize="30sp"
        android:textAlignment="center"
        android:maxLength="1"
        android:maxLines="1" />
    <TextView
        android:id="@+id/settings_2PositionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_0Up"
        android:layout_toLeftOf="@id/settings_1PositionNumber"
        android:layout_toStartOf="@id/settings_1PositionNumber"
        android:layout_alignLeft="@id/settings_2Up"
        android:layout_alignStart="@id/settings_2Up"
        android:text="@string/zero"
        android:textSize="30sp"
        android:textAlignment="center"
        android:maxLength="1"
        android:maxLines="1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_0Up"
        android:layout_toLeftOf="@id/settings_2PositionNumber"
        android:layout_toStartOf="@id/settings_2PositionNumber"
        android:text="@string/speed"
        android:textSize="30sp" />
    <ImageView
        android:id="@+id/settings_0Down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_0PositionNumber"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="60dp"
        android:layout_marginEnd="60dp"
        android:src="@drawable/ic_keyboard_arrow_down_black_48dp"
        android:contentDescription="@string/down"
        android:onClick="changeValue"/>
    <ImageView
        android:id="@+id/settings_1Down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_0PositionNumber"
        android:layout_toLeftOf="@id/settings_0Up"
        android:layout_toStartOf="@id/settings_0Up"
        android:src="@drawable/ic_keyboard_arrow_down_black_48dp"
        android:contentDescription="@string/down"
        android:onClick="changeValue"/>
    <ImageView
        android:id="@+id/settings_2Down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_0PositionNumber"
        android:layout_toLeftOf="@id/settings_1Up"
        android:layout_toStartOf="@id/settings_1Up"
        android:src="@drawable/ic_keyboard_arrow_down_black_48dp"
        android:contentDescription="@string/down"
        android:onClick="changeValue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_2Down"
        android:weightSum="3">
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Set speed"
            android:onClick="setSongsForInterval"/>
    </LinearLayout>

</RelativeLayout>